--- a/forwarded-tasks.html
+++ b/forwarded-tasks.html
@@ -222,6 +222,7 @@
               </li>
             </ul>
             <div class="signout">
+              <img src="assets/Logout.png " />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -257,7 +258,9 @@
           <!-- Start manipulate draft -->
           <div class="manipulate-draft">
             <div class="choice">
-              <p style="font-size: 18px; font-weight: 500">البريد الصادر</p>
+              <p style="font-size: 18px; font-weight: 500">
+                متابعة المهام المحولة
+              </p>
             </div>
           </div>
           <!-- End manipulate draft -->
