--- a/new-missions.html
+++ b/new-missions.html
@@ -245,22 +245,23 @@
               </li>
               <li>
                 <img src="assets/more-circle.png" />
-                <a href="">التعميمات</a>
+                <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
                 <img src="assets/document.png" />
-                <a href="">متابعة المهام المحولة</a>
+                <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
                 <img src="assets/search.png" />
-                <a href=""> بحث</a>
+                <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
                 <img src="assets/note.png" />
-                <a href="">التقارير</a>
+                <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
+              <img src="assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
