--- a/forwarding-book.html
+++ b/forwarding-book.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body dir="rtl">
     <main style="background-color: #e0e0e0">
       <div class="dashboard">
         <div class="notification-bg">
@@ -176,7 +176,7 @@
           <div class="export-section">
             <div class="export-btn">إصدار</div>
             <div class="export-card">
-              <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
+              <div><a href="">إصدار مذكرة جديدة</a></div>
               <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
             </div>
           </div>
@@ -199,7 +199,7 @@
                 <img src="assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
-              <li class="active">
+              <li>
                 <img src="assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
@@ -211,7 +211,7 @@
                 <img src="assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
-              <li>
+              <li class="active">
                 <img src="assets/search.png" />
                 <a href="./search-admin-files.html"> بحث</a>
               </li>
@@ -228,7 +228,7 @@
         </aside>
         <div class="stats">
           <!-- Start Nav -->
-          <div class="nav">
+          <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
                 <img src="assets/clock.png" alt="clock" />
@@ -241,220 +241,114 @@
             </div>
             <div class="help">
               <a href=""><img src="assets/question.png" alt="question" /></a>
-              <a href=""
+              <a href="./support.html"
                 ><img src="assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
+                  class="notify"
                   src="assets/notification.png"
                   alt="support"
-                  class="notify"
                 />
               </div>
             </div>
           </div>
           <!-- End Nav -->
-          <!-- Start manipulate draft -->
-          <div class="manipulate-draft">
+          <!-- Start choose ministry -->
+          <div class="choose-ministry">
             <div class="choice">
-              <p style="font-size: 18px; font-weight: 500">المسودة</p>
+              <a href="./homepage.html"
+                ><img src="assets/arrow.png" alt="arrow"
+              /></a>
+              <p>تحويل كتاب</p>
             </div>
-            <div class="save">
-              <div>
-                <a href="">الرد علي المذكرة</a>
-                <img src="assets/send.png" />
+          </div>
+          <!-- End choose ministry -->
+          <!-- Start Editor -->
+          <div class="whole-editor">
+            <div class="search-recievers">
+              <form class="forward-form">
+                <div>
+                  <label for="recieve-date">يرجي تحديد تاريخ التسليم</label>
+                  <input type="date" name="recieve-date" />
+                </div>
+                <div>
+                  <label for="search">المستقبلين</label>
+                  <input type="text" name="search" placeholder="بحث" />
+                </div>
+              </form>
+              <div class="input-cont">
+                <p class="receive-title">المستلمين</p>
+                <div class="receivers-2">
+                  <div class="row">
+                    <div class="single-receiver">
+                      <div class="receiver-details">
+                        <img src="assets/person.png" alt="person" />
+                        <p>احمد احمد</p>
+                      </div>
+                      <img src="assets/close 2.png" alt="close" />
+                    </div>
+                    <div class="single-receiver">
+                      <div class="receiver-details">
+                        <img src="assets/person.png" alt="person" />
+                        <p>احمد احمد</p>
+                      </div>
+                      <img src="assets/close 2.png" alt="close" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="single-receiver">
+                      <div class="receiver-details">
+                        <img src="assets/person.png" alt="person" />
+                        <p>احمد احمد</p>
+                      </div>
+                      <img src="assets/close 2.png" alt="close" />
+                    </div>
+                    <div class="single-receiver">
+                      <div class="receiver-details">
+                        <img src="assets/person.png" alt="person" />
+                        <p>احمد احمد</p>
+                      </div>
+                      <img src="assets/close 2.png" alt="close" />
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div>
-                <a href="">مذكرة جديدة</a>
-                <img src="assets/send.png" />
+              <div class="arbitary">
+                <div class="main-section section">
+                  <div class="section-details">
+                    <img src="assets/section.png" />
+                    <p>اسم القسم</p>
+                  </div>
+                  <div class="secondary-section section">
+                    <div class="section-details">
+                      <img src="assets/secondary-section.png" />
+                      <p>قسم فرعي</p>
+                    </div>
+                    <div class="secondary-section section">
+                      <div class="section-details">
+                        <img src="assets/secondary-section.png" />
+                        <p>قسم فرعي</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="editor" style="flex: 2">
+              <div class="editing">
+                <div class="file-preview">
+                  <iframe
+                    src="https://research.google.com/pubs/archive/44678.pdf"
+                    width="100%"
+                    height="900px"
+                  >
+                  </iframe>
+                </div>
               </div>
             </div>
           </div>
-          <!-- End manipulate draft -->
-          <!-- Start Actions -->
-          <div class="actions">
-            <div class="docs">
-              <div class="img-action">
-                <img src="assets/print.png" alt="print" class="print" />
-              </div>
-              <div class="img-action">
-                <img src="assets/export.png" alt="export" class="export" />
-              </div>
-              <div class="img-action">
-                <img src="assets/filter.png" alt="filter" class="filter" />
-              </div>
-            </div>
-            <form class="search">
-              <input type="text" placeholder="البحث" />
-            </form>
-          </div>
-          <!-- end Actions -->
-          <div class="draft-data">
-            <div class="draft-header">
-              <div class="column">
-                <div class="first-item">
-                  <input type="checkbox" name="all" id="all" />
-                </div>
-                <div>
-                  <input type="checkbox" name="select" id="select" />
-                </div>
-                <div>
-                  <input type="checkbox" name="select" id="select" />
-                </div>
-                <div>
-                  <input type="checkbox" name="select" id="select" />
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>إجراءات</p>
-                </div>
-                <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
-                </div>
-                <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
-                </div>
-                <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>الموضوع</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>اسم الجهة</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>تاريخ المعاملة</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>رقم المعاملة</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>رقم المرجع</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>الاسم / الرقم المدني</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-              <div class="column">
-                <div class="first-item">
-                  <p>ملاحظات التحويل</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-                <div class="item">
-                  <p>State</p>
-                </div>
-              </div>
-            </div>
-            <!-- Start Pagination -->
-            <div class="pagination">
-              <div class="lines">
-                <select name="lines" id="line">
-                  <option value="15">5</option>
-                  <option value="15">10</option>
-                  <option value="15">15</option>
-                </select>
-                <label for="lines">الاسطر بالصفحه</label>
-              </div>
-              <div class="pages">
-                <div><img src="assets/arrow-right.png" alt="left" /></div>
-                <div class="page-numbers">
-                  <a>4</a>
-                  <a>3</a>
-                  <a>...</a>
-                  <a>2</a>
-                  <a class="active">1</a>
-                </div>
-                <div><img src="assets/arrow-left.png" alt="left" /></div>
-              </div>
-              <div class="total">
-                <p>المجموع 57</p>
-              </div>
-            </div>
-
-            <!-- End Pagination -->
-          </div>
+          <!-- End Editor -->
         </div>
       </div>
     </main>
@@ -495,6 +389,15 @@
             document.querySelector(".notification").classList.toggle("active");
           }
         });
+      let sections = document.querySelectorAll(".section");
+      sections.forEach((sec) => {
+        sec.addEventListener("click", (e) => {
+          e.stopPropagation();
+          sec.classList.toggle("expanded");
+          sec.querySelector(".section")?.classList.toggle("active");
+          console.log(sec);
+        });
+      });
     </script>
   </body>
 </html>
