--- a/publicity.html
+++ b/publicity.html
@@ -205,22 +205,23 @@
               </li>
               <li class="active">
                 <img src="assets/more-circle.png" />
-                <a href="">التعميمات</a>
+                <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
                 <img src="assets/document.png" />
-                <a href="">متابعة المهام المحولة</a>
+                <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
                 <img src="assets/search.png" />
-                <a href=""> بحث</a>
+                <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
                 <img src="assets/note.png" />
-                <a href="">التقارير</a>
+                <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
+              <img src="assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -256,7 +257,7 @@
           <!-- Start manipulate draft -->
           <div class="manipulate-draft">
             <div class="choice">
-              <p style="font-size: 18px; font-weight: 500">البريد الصادر</p>
+              <p style="font-size: 18px; font-weight: 500">التعميمات</p>
             </div>
           </div>
           <!-- End manipulate draft -->
