--- a/secret-files.html
+++ b/secret-files.html
@@ -221,6 +221,7 @@
               </li>
             </ul>
             <div class="signout">
+              <img src="assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
